Add note to remaining projects

--- a/app/views/organisations/plan.html.erb
+++ b/app/views/organisations/plan.html.erb
@@ -10,6 +10,17 @@
 
   <div class="content" >
     <p>
+      <% private_project_count = @organisation.private_project_count %>
+      <% projects_remain = @organisation.plan.private_projects.to_i - private_project_count.to_i %>
+      This organisation is currently using the <span style="font-weight: bold"><%= @organisation.plan.name %><span> plan which allows to monitor <span style="font-weight: bold"><%= pluralize(@organisation.plan.private_projects, 'private project' %><span>.
+      <% if projects_remain.to_i < 1 %>
+        Currently there are <span style="font-weight: bold"><%= pluralize(private_project_count, 'private project' %><span> in this organisation and the limits are reached. Upgrade to a higher plan if more private projects are needed.<br/>
+      <% else %>
+        Currently there are <span style="font-weight: bold"><%= pluralize(private_project_count, 'private project' %><span> in this organisation and <span style="font-weight: bold"><%= pluralize(projects_remain, 'more private project' %><span> can be monitored.<br/>
+      <% end %>
+    </p>
+    <hr />
+    <p>
       We only charge a small fee for monitoring project files in GitHub/Bitbucket repositories.<br/>
     </p>
     <hr />
