--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -23,6 +23,16 @@
         </div>
       <% end %>
 
+      <% if !Settings.instance.environment.to_s.eql?('enterprise') %>
+        <div id='div-gpt-ad-1407836165464-0' style="margin-top: 20px;">
+          <script type='text/javascript'>
+            googletag.cmd.push(function() {
+              googletag.pubads().display('/53015287/versioneye.com_d_160x600_1', [160, 600], 'div-gpt-ad-1407836165464-0');
+            });
+          </script>
+        </div>
+      <% end %>
+
     </div>
     <div class="col-md-8 col-xs-12 pull-left">
 
