--- a/app/views/component_whitelists/_explain.html.erb
+++ b/app/views/component_whitelists/_explain.html.erb
@@ -1,4 +1,9 @@
-With a component whitelist you can whitelist artifacts or whole groupIds. Dependencies who are on a component
-whitelist are marked green in the license tab, even if they violate the license whitelist or the license
-is unknown. A component whitelist is always an extension for the license whitelist. Please use license whitelist
-and component whitelist always together! Never use a component whitelist without a license whitelist.
+<p>
+  With a component whitelist you can whitelist artifacts or whole groupIds. Dependencies who are on a component
+  whitelist are marked green in the license tab, even if they violate the license whitelist or the license
+  is unknown.
+</p>
+<p style="font-weight: bold">
+  A component whitelist is always an extension for the license whitelist. Please use license whitelist
+  and component whitelist always together! Never use a component whitelist without a license whitelist.
+</p>
