--- a/app/views/products/_product_show_twitter_follow.html.erb
+++ b/app/views/products/_product_show_twitter_follow.html.erb
@@ -5,7 +5,7 @@
   </div>
 <% end %>
 
-<% if !Settings.instance.environment.to_s.eql?('enterprise') %>
+<% if !Settings.instance.environment.to_s.eql?('enterprise') && request.original_url.to_s.match("@").nil? %>
   <div id='div-gpt-ad-1407836165464-0'>
     <script type='text/javascript'>
       googletag.cmd.push(function() {
