--- a/app/views/products/references.html.erb
+++ b/app/views/products/references.html.erb
@@ -7,6 +7,16 @@
     <%= render '/shared/signup_ad' %>
   <% end %>
 
+  <% if !Settings.instance.environment.to_s.eql?('enterprise') && request.original_url.to_s.match("@").nil? %>
+    <div id='div-gpt-ad-1407836165464-0' style="padding-top: 20px;">
+      <script type='text/javascript'>
+        googletag.cmd.push(function() {
+          googletag.pubads().display('/53015287/versioneye.com_d_160x600_1', [160, 600], 'div-gpt-ad-1407836165464-0');
+        });
+      </script>
+    </div>
+  <% end %>
+
 </div>
 
 <% if @product %>
