Drop Google Fonts.
Because of Enterprise environments.

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -16,7 +16,7 @@ body,html{
 body {
   font-size: 14px;
   color: $text_casual;
-  font-family: "Droid Sans", "Droid Serif", Helvetica;
+  font-family: "Helvetica";
 }
 
 h1,
@@ -26,16 +26,16 @@ h4,
 h5,
 h6 {
   color: black;
-  font-family: "Droid Sans", "Helvetica";
+  font-family: "Helvetica";
 }
 
 h1 {
-  font-family: "Droid Sans", "Helvetica";
+  font-family: "Helvetica";
   font-size: 30px;
 }
 
 h2 {
-  font-family: "Droid Sans", "Helvetica";
+  font-family: "Helvetica";
   font-size: 24px;
 }
 
@@ -63,14 +63,14 @@ h5.dep_header{
 
 
 h1.page-title  {
-  font-family: "Droid Serif", "Droid";
+  font-family: "Helvetica";
   font-size: 25px;
   color: $text_casual;
   margin: 0;
 }
 
 h3 {
-  font-family: "Droid Sans";
+  font-family: "Helvetica";
   font-size: 21pt;
 }
 
