--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -197,7 +197,7 @@ div.content_no_head {
 .pricing_h{
   margin-top: 0px;
   padding-top: 0px;
-  font-family: "Droid Sans";
+  font-family: "Helvetica";
   margin-bottom: 20px;
 }
 
