--- a/app/assets/stylesheets/marketing.scss
+++ b/app/assets/stylesheets/marketing.scss
@@ -24,7 +24,7 @@
 
 h5.marketing {
   color: black;
-  font-family: "Droid Sans";
+  font-family: "Helvetica";
   margin: 0px 0px 20px 0px;
   text-align: left;
 }
