--- a/app/assets/stylesheets/enterprise.scss
+++ b/app/assets/stylesheets/enterprise.scss
@@ -6,7 +6,7 @@
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
   width: 400px;
-  font-family: "Droid Sans", "Helvetica";
+  font-family: "Helvetica";
   font-size: 70px;
 }
 
@@ -14,7 +14,7 @@
   position: relative;
   top: 66px;
   left: 10px;
-  font-family: "Droid Sans", "Helvetica";
+  font-family: "Helvetica";
   font-size: 20px;
   width: 700px;
 }
@@ -30,7 +30,7 @@ h2{
 
 h3{
   font-size: 20px;
-  font-family: "Droid Sans", "Helvetica"
+  font-family: "Helvetica"
 }
 
 .two_col_box{
