--- a/app/views/organisations/pullrequests.html.erb
+++ b/app/views/organisations/pullrequests.html.erb
@@ -1,5 +1,5 @@
 
-<div class="col-md-3" >
+<div class="col-md-3 navbar_container" >
 <% if defined?(@organisation) && !@organisation.nil? %>
   <%= render 'organisations/navi' %>
 <% end %>
