--- a/app/views/user/stash_repos/show.html.erb
+++ b/app/views/user/stash_repos/show.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-3" >
+<div class="col-md-3 navbar_container" >
   <% if @organisation %>
     <%= render "/organisations/navi" %>
   <% else %>
@@ -6,7 +6,6 @@
     <%= render '/user/helpers/navi' %>
   <% end %>
 </div>
-
 
 <div class="col-md-9">
   <div class="content_header_def" >
