--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 
 <% if !@users.nil? && !@users.empty? %>
 
-  <div class="col-md-3 col-xs-12" >
+  <div class="col-md-3 col-xs-12 navbar_container" >
     <%= render 'settings/navi' %>
   </div>
 
