--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -774,40 +774,6 @@ span.path {
   font-family: monospace;
 }
 
-/*
-  Carbon Ads
-*/
-/* Carbon Ads Unit CSS */
-#carbonads {
-  display: block;
-  overflow: hidden;
-  padding: 1em;
-  border-radius: 3px;
-  background-color: #eef0f1;
-  font-size: 14px;
-  line-height: 1.5;
-}
-
-
-#carbonads span {
-  display: block;
-  overflow: hidden;
-}
-
-.carbon-img {
-  display: block;
-  margin: 0 auto 1em;
-  text-align: center;
-}
-
-.carbon-text {
-  display: block;
-  margin-bottom: 1em;
-  text-align: left;
-}
-
-.carbon-poweredby {
-  display: block;
-  text-align: right;
-  font-size: 12px;
+.navbar_container{
+  padding: 0;
 }
