--- a/app/views/user/bitbucket_repos/init.html.erb
+++ b/app/views/user/bitbucket_repos/init.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-3" >
+<div class="col-md-3 navbar_container" >
   <% if @organisation %>
     <%= render "/organisations/navi" %>
   <% else %>
