--- a/app/views/organisations/components.html.erb
+++ b/app/views/organisations/components.html.erb
@@ -71,7 +71,7 @@
       <% lang_prod = "#{language}:#{prod_key}" %>
 
       <h4>
-        <span class="icon_<%= language %> on small" style="margin-left: -12px;" ></span> <%= link_to "#{prod_key}", "/#{language}/#{prod_key}" %>
+        <span class="icon_<%= language %> on small" ></span> <%= link_to "#{prod_key}", "/#{language}/#{prod_key}" %>
       </h4>
       <div>
         Used in:
