Improve alignment and CSS.

--- a/app/views/users/updatepassword.html.erb
+++ b/app/views/users/updatepassword.html.erb
@@ -1,6 +1,7 @@
-<% title 'Saving new password' %>
+<% title 'Set new password' %>
 
-<%= form_tag('/updatepassword', class: 'form-horizontal') do %>
+<div class="row">
+  <%= form_tag('/updatepassword', class: 'form-horizontal') do %>
     <div class="control-group">
       <div class="controls">
         Please type your password twice.<br/>
@@ -9,14 +10,14 @@
     </div>
 
     <div class="control-group">
-        <%= label_tag :password, "Password", :class => "control-label", :for => "password" %>
+      <%= label_tag :password, "Password", :class => "control-label", :for => "password" %>
       <div class="controls">
         <%= password_field_tag :password, "", :id => "password" %>
       </div>
     </div>
 
     <div class="control-group">
-        <%= label_tag :email, "Password again", :class => "control-label", :for => "password2" %>
+      <%= label_tag :email, "Password again", :class => "control-label", :for => "password2" %>
       <div class="controls">
         <%= password_field_tag :password2, "", :id => "password2" %>
       </div>
@@ -28,4 +29,5 @@
         <button type="submit" class="btn btn-big btn-primary" >Save</button>
       </div>
     </div>
-<% end %>
+  <% end %>
+</div>
