--- a/app/views/users/updatepassword.html.erb
+++ b/app/views/users/updatepassword.html.erb
@@ -2,32 +2,34 @@
 
 <div class="row">
   <%= form_tag('/updatepassword', class: 'form-horizontal') do %>
-    <div class="control-group">
+
+    <div class="form-group">
       <div class="controls">
         Please type your password twice.<br/>
         <%= hidden_field_tag :verification, @verification %>
       </div>
     </div>
 
-    <div class="control-group">
+    <div class="form-group">
       <%= label_tag :password, "Password", :class => "control-label", :for => "password" %>
       <div class="controls">
-        <%= password_field_tag :password, "", :id => "password" %>
+        <%= password_field_tag :password, "", :id => "password", :class => "form-control" %>
       </div>
     </div>
 
-    <div class="control-group">
-      <%= label_tag :email, "Password again", :class => "control-label", :for => "password2" %>
+    <div class="form-group">
+      <%= label_tag :email, "Repeat", :class => "control-label", :for => "password2" %>
       <div class="controls">
-        <%= password_field_tag :password2, "", :id => "password2" %>
+        <%= password_field_tag :password2, "", :id => "password2", :class => "form-control", :placeholder => "Password repeat" %>
       </div>
     </div>
 
-    <div class="control-group">
+    <div class="form-group">
       <div class="control-label"></div>
       <div class="controls">
         <button type="submit" class="btn btn-big btn-primary" >Save</button>
       </div>
     </div>
+
   <% end %>
 </div>
