--- a/app/views/user/projects/_project_settings.html.erb
+++ b/app/views/user/projects/_project_settings.html.erb
@@ -101,16 +101,16 @@
       <form action="<%= team_user_project_path(@project) %>" method="post" class="form-inline" >
         <%= tag(:input, :type => "hidden", :name => request_forgery_protection_token.to_s, :value => form_authenticity_token) %>
         <div>
-          Assign a team to the project. The team members will receive the email notifications and they are allowed to edit/update this project.
+          Assign one or multiple teams to this project and the team members will receive notifications.
         </div>
         <div class="form-group" class="form-control" >
-          <select name="team_name" class="form-control" >
+          <select name="team_names[]" multiple="multiple" size=5 class="form-control" >
             <% @project.organisation.teams.each do |team| %>
-              <option value="<%= team.name %>" <%= !@project.teams.empty? && @project.teams.first.name.eql?(team.name)  ? 'selected' : '' %> ><%= team.name %></option>
+              <option value="<%= team.name %>" <%= !@project.teams.empty? && @project.teams.map(&:name).include?(team.name) ? 'selected' : '' %> ><%= team.name %></option>
             <% end %>
           </select>
         </div>
-        <button type="submit" class="btn btn-primary" >Transfer</button>
+        <button type="submit" class="btn btn-primary" >Assign</button>
       </form>
     <% end %>
 
